# freight_management

./: README.md  gitpush.sh  pyproject.toml
freight_management/: hooks.py
freight_management.egg-info/: PKG-INFO
freight_management/fixtures/: workflow.json  workflow_state.json
freight_management/freight_management/doctype/freight_packages/: freight_packages.json  freight_packages.py
freight_management/freight_management/doctype/freight_packages_parent/: freight_packages_parent.json  freight_packages_parent.py
freight_management/freight_management/doctype/shipment/: shipment.json  shipment.py
freight_management/freight_management/doctype/shipment_delivery_note/: shipment_delivery_note.json  shipment_delivery_note.py
freight_management/freight_management/doctype/shipment_parcel/: shipment_parcel.json  shipment_parcel.py
freight_management/freight_management/doctype/shipment_parcel_template/: shipment_parcel_template.json  shipment_parcel_template.py
freight_management/freight_management/doctype/shipment_type/: shipment_type.json  shipment_type.py
