[project]
name = "freight_management"
version = "0.0.1"
description = "Freight Management"
authors = [
    { name = "Your Name", email = "your@email.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "frappe"
]

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "freight_management"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0"
